--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           python-version: 3.8
       
       - name: Install dependences
-        run: -m pip install --upgrade pip && pip install -r requirements.txt
+        run: c:\hostedtoolcache\windows\python\3.8.10\x64\python.exe -m pip install --upgrade pip && pip install -r requirements.txt
           
       - name: Login in wandb
         run: 
